# UAV-Communications-Encryption

./: .gitattributes  GroundStation.py  README.md  UAV.py  prueba.py
GCS/: CMakeLists.txt
GCS/src/: CMakeLists.txt  main.cpp
GCS/src/Communication/: Connect.cpp  Connect.hpp  MessageQueue.hpp  Receiver.cpp  Receiver.hpp
GCS/src/Communication/Certificates/: ca_cert.pem  gcs_cert.pem  gcs_key.pem
GCS/src/Cypher/: Decipher.cpp  Decipher.hpp  FrameQueue.hpp
GCS/src/D.A.S/: DataAcquisition.hpp  DataFrame.cpp  DataFrame.hpp
GroundStation/: DiffieHellman.py  GroundStation.py  GroundStationGUI.py  main.py
UAV/: CMakeLists.txt  UAV.py  UAVGUI.py  main.py
UAV/src/: CMakeLists.txt  main.cpp
UAV/src/Cipher/: Cipher.cpp  Cipher.hpp  FrameQueue.cpp
UAV/src/Communication/: Connect.cpp  Connect.hpp  MessageQueue.cpp  Sender.cpp  Sender.hpp
UAV/src/Communication/Certificates/: uav_cert.pem  uav_key.pem
UAV/src/D.A.S/: DataAcquisition.cpp  DataFrame.cpp  DataFrame.hpp
UAV/src/Telemetry/: CameraSensor.cpp  CameraSensor.hpp
